fixed some spacing issues

--- a/web/styles/about.css
+++ b/web/styles/about.css
@@ -2,7 +2,7 @@
 
 main {
   max-width: 1100px;
-  margin: 0 auto;
+  margin: 1rem auto;
   padding: 2rem 1.2rem 3rem;
 }
 
